--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -84,6 +84,7 @@ $b-fontFamily-heading: 'ff-tisa-web-pro', 'Georgia', serif
 $b-fontFamily-mono: menlo, monaco, "andale mono", courier, "lucida console", monospace
 $b-fontFamily: 'source-sans-pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontSize: 18px
+$b-fontSize-b: 22px
 $b-fontSize-xs: 60%
 $b-fontSize-s: 75%
 $b-fontSize-m: 90%
