--- a/source/index.haml
+++ b/source/index.haml
@@ -17,15 +17,15 @@
           %p= post.data.description
       .g-b.g-b--m--1of2
         .card
-          %h3.mbm More Posts
+          %h2.mbs More Posts
           %ul.split.split--divided.split--responsive.mbm
             - get_posts()[1..3].each do |post|
               %li.split-item
                 .split-cell.split-cell--fluid
                   = link_to post.data.title, post.url, class: 'h3 tfb'
                 .split-cell.split-cell--fixed
-                  %time.tcs.tsm.ttu.twb= pretty_date(post.data.date)
-          = link_to 'My Sweet Blog', '/blog', class: 'btn btn--a btn--l'
+                  %time.tcs.tss.ttu.twb= pretty_date(post.data.date)
+          = link_to 'My Sweet Blog', '/blog', class: 'btn btn--a'
 
 %section.row
   .cell.well.well--l
