Add Label Structure

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -35,6 +35,7 @@
 // -------------------------------------
 
 @import "structures/header"
+@import "structures/label"
 @import "structures/post"
 
 // -------------------------------------
