--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -10,7 +10,7 @@
       .cell.cell--s.well.well--l
         .bchb.pal.tac.tci
           %h1= current_page.data.title
-          %time.tsm.ttu.twb= pretty_date(current_page.data.date)
+          %time.label.label--invert= pretty_date(current_page.data.date)
 
     %section.row
       .cell.cell--s.well.well--l
