--- a/source/index.haml
+++ b/source/index.haml
@@ -13,7 +13,7 @@
         %h2.mbs Latest Blog Post
         - get_posts()[0..0].each do |post|
           = link_to post.data.title, post.url, class: 'h3 tfb'
-          %time.db.mbm.tcs.tsm.ttu.twb= pretty_date(post.data.date)
+          %time.label.db.mbm= pretty_date(post.data.date)
           %p= post.data.description
       .g-b.g-b--m--1of2
         .card
@@ -24,13 +24,13 @@
                 .split-cell.split-cell--fluid
                   = link_to post.data.title, post.url, class: 'h3 tfb'
                 .split-cell.split-cell--fixed
-                  %time.tcs.tss.ttu.twb= pretty_date(post.data.date)
+                  %time.label= pretty_date(post.data.date)
           = link_to 'My Sweet Blog', '/blog', class: 'btn btn--a'
 
 %section.row
   .cell.well.well--l
     .group.mbm
-      %h3.fl Dribbble Shots
+      %h2.fl Dribbble Shots
       =link_to 'View Profile', 'https://dribbble.com/johndjameson', class: 'fr'
     .g
       .g-b.g-b--s--1of2.g-b--l--1of4
