--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -1,25 +1,21 @@
 %section.row.row--a
-  .cell.well.well--l
-    .g
-      .g-b.g-b--center.g-b--m--3of4
-        .bchb.pal.tac.tci
-          %h1 The Blog
-          %p.mbf Because 21-year-olds share the most valuable widsom.
+  .cell.cell--s.well.well--l
+    .bchb.pal.tac.tci
+      %h1 The Blog
+      %p.mbf Because 21-year-olds share the most valuable widsom.
 
 %section.row
-  .cell.well.well--l
-    .g
-      .g-b.g-b--center.g-b--m--3of4
-        - get_posts()[0..0].each do |post|
-          = link_to post.data.title, post.url, class: 'h2 tfb'
-          %time.db.mbm.label= pretty_date(post.data.date)
-          %p.mbl= post.data.description
-        .card
-          %h2.h2.mbm Archive
-          %ul.split.split--divided.split--responsive
-            - get_posts()[1..3].each do |post|
-              %li.split-item
-                .split-cell.split-cell--fluid
-                  = link_to post.data.title, post.url, class: 'h3 tfb'
-                .split-cell.split-cell--fixed
-                  %time.label= pretty_date(post.data.date)
+  .cell.cell--s.well.well--l
+    - get_posts()[0..0].each do |post|
+      = link_to post.data.title, post.url, class: 'h2 tfb'
+      %time.db.mbm.label= pretty_date(post.data.date)
+      %p.mbl= post.data.description
+    .card
+      %h2.h2.mbs Archive
+      %ul.split.split--divided.split--responsive
+        - get_posts()[1..3].each do |post|
+          %li.split-item
+            .split-cell.split-cell--fluid
+              = link_to post.data.title, post.url, class: 'h3 tfb'
+            .split-cell.split-cell--fixed
+              %time.label= pretty_date(post.data.date)
