--- a/source/shared/_head.haml
+++ b/source/shared/_head.haml
@@ -4,7 +4,7 @@
   %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0' }
 
   / Use title if it's in the page YAML frontmatter
-  %title= current_page.data.title || 'The Middleman'
+  %title= "#{current_page.data.title} | John D. Jameson"
 
   = stylesheet_link_tag 'application'
   = javascript_include_tag "//use.typekit.net/gqu6ggi.js"
