Add page meta descriptions

--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -1,12 +1,13 @@
 ---
 title: Blog
+description: "Tips and tricks on web design, front-end development, and the Internet's other scary things."
 ---
 
 %section.row.row--a
   .cell.cell--s.well.well--l
     .bchb.pal.tac.tci
       %h1 The Blog
-      %p.mbf Because 21-year-olds share the most valuable widsom.
+      %p.mbf= current_page.data.description
 
 %section.row
   .cell.cell--s.well.well--l
