Add Google author meta

--- a/source/shared/_head.haml
+++ b/source/shared/_head.haml
@@ -6,7 +6,7 @@
   %title= "#{current_page.data.title} | John D. Jameson"
 
   %meta{ :name => 'description', :content => escape_html(current_page.data.description) }
-
+  %link{ :href => 'https://plus.google.com/u/0/113914298266231922059/posts', :rel => 'author' }
   = stylesheet_link_tag 'application'
   = javascript_include_tag "//use.typekit.net/gqu6ggi.js"
   :javascript
