--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -34,6 +34,7 @@
 //   Structures
 // -------------------------------------
 
+@import "structures/figure"
 @import "structures/header"
 @import "structures/label"
 @import "structures/post"
