--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -45,7 +45,9 @@ h4, .h4
   margin-top: 0
 
 h1, .h1
-  font-size: 220%
+  font-size: 160%
+  +respond-to($g-l)
+    font-size: 220%
 
 h2, .h2
   font-size: 120%
