--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -9,6 +9,7 @@
   color: $c-subdue
   font-size: $b-fontSize-s
   font-weight: bold
+  letter-spacing: em(1px)
   text-transform: uppercase
 
 // -------------------------------------
