--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -17,7 +17,7 @@ description: "Tips and tricks on web design, front-end development, and the Inte
       %p.mbl= post.data.description
     .card
       %h2.h2.mbs Archive
-      %ul.split.split--divided.split--responsive
+      %ul.split.split--divided.split--responsive.prs
         - get_posts()[1..3].each do |post|
           %li.split-item
             .split-cell.split-cell--fluid
