--- a/source/index.haml
+++ b/source/index.haml
@@ -26,7 +26,7 @@ description: "Front-end Developer Apprentice at Code School"
           %ul.split.split--divided.split--responsive.mbm
             - get_posts()[1..3].each do |post|
               %li.split-item
-                .split-cell.split-cell--fluid
+                .split-cell.split-cell--fluid.prs
                   = link_to post.data.title, post.url, class: 'h3 tfb'
                 .split-cell.split-cell--fixed
                   %time.label= pretty_date(post.data.date)
