Update palette colors

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -17,26 +17,30 @@
 
 // ----- Palette ----- //
 
+// Black
+
+$black: #000
+
 // Gray - dark to light
 
-$nero: #222
-$nightrider: #333
+$nero: #2c2c28
 $quill: #e2e2e0
 $desertstorm: #f1f0ee
 
 // White
 
-$alabaster: #faf9f7
+$alabaster: #f8f8f7
+$white: #fff
 
 // Purple
 
 $scampi: #6c5995
-$majesty: #8a5c99
-$orchid: #93609d
+$majesty: #705c99
+$orchid: #86609f
 
 // ----- Base ----- //
 
-$c-background-invert: $desertstorm
+$c-background-invert: $white
 $c-background: $alabaster
 $c-border: $quill
 $c-highlight: $orchid
