Add extra Post heading whitespace

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -12,10 +12,11 @@
     padding-left: $list-space
 
   h2
-    margin-top: $b-space
+    margin-top: $b-space-l
     margin-bottom: $b-space-s
 
   h3
+    margin-top: $b-space
     margin-bottom: $b-space-s
 
   code, kbd
