--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -98,7 +98,7 @@ $b-lineHeight: 1.5
 
 // ----- Sizing ----- //
 
-$b-maxWidth: em(900px)
+$b-maxWidth: em(940px, $b-fontSize-b)
 $b-maxWidth-s: em(560px)
 $b-space: em(20px)
 $b-space-xs: 0.25 * $b-space
