Add background color Tool

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -9,6 +9,8 @@
 //   Background
 // -------------------------------------
 
+.bcb
+  background: $c-background
 .bch
   background: $c-highlight
 .bchb
