Add Hero Struture and assets

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -36,6 +36,7 @@
 
 @import "structures/figure"
 @import "structures/header"
+@import "structures/hero"
 @import "structures/label"
 @import "structures/post"
 
