Apply Hero styles/structure in markup

--- a/source/index.haml
+++ b/source/index.haml
@@ -3,12 +3,14 @@ title: Home
 description: "Front-end Developer Apprentice at Code School"
 ---
 
-%section.row.row--a.tci
-  .cell.well.well--l
-    .g
+%section.hero.hero--ampersand
+  .hero-content
+    .hero-header
+      = partial 'shared/header'
+    .g.mtm
       .g-b.g-b--m--1of2
         %h1 Hey, there.
-        %p I&rsquo;m John D. Jameson—front‑end developer and avid indoorsman in Orlando, Florida.
+        %p I&rsquo;m John D. Jameson—<strong>front‑end developer</strong> and avid indoorsman in Orlando, Florida.
         %p I work (and learn) at Code School, geek out over CSS architecture, and love me some web typography.
 
 %section.row
