Add invertedLink Structure

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -37,6 +37,7 @@
 @import "structures/figure"
 @import "structures/header"
 @import "structures/hero"
+@import "structures/invertedLink"
 @import "structures/label"
 @import "structures/post"
 
