--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -64,7 +64,12 @@ $pillar-borderColor: $c-border
 
 // ----- Structures ----- //
 
-// ...
+// Inverted Link
+
+$invertedLink-borderColor: $c-text-invert
+$invertedLink-borderColor-hover: rgba($invertedLink-borderColor, 0.15)
+$invertedLink-color: $c-text-invert
+$invertedLink-color-hover: rgba($invertedLink-color, 0.5)
 
 // ----- Vendor ----- //
 
