Add link transition

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -65,6 +65,7 @@ a
   color: $c-highlight
   font-weight: bold
   text-decoration: none
+  transition: $b-transition
   &:hover,
   &:focus
     color: darken($c-highlight, 10%)
