--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -87,6 +87,10 @@ $b-borderWidth: 2px
 $b-border: $b-borderWidth $b-borderStyle $c-border
 $b-boxShadow: 0 2px 0 rgba($c-text, 0.25)
 
+// ----- Transitions ----- //
+
+$b-transition: 0.2s ease-in-out
+
 // ----- Typography ----- //
 
 $b-fontFamily-heading: 'ff-tisa-web-pro', 'Georgia', serif
