Update Highlight module

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -198,5 +198,4 @@ $header-link-fontWeight: inherit
 
 // ----- Highlight ----- //
 
-$highlight-fontSize: 14px
-$highlight-space: $b-space
+$highlight-border: 1px $b-borderStyle $c-border
