--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,3 +1,3 @@
 %footer.row.row--a.tci
   .cell.well.well--l
-    %p Built using MVCSS and Middleman. Check out the source code on GitHub.
+    %p.tss Built using <a href='http://mvcss.github.io/' class='invertedLink'>MVCSS</a> and <a href='http://middlemanapp.com/' class='invertedLink'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='invertedLink'>GitHub</a>.
