Add Post blockquote style

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -12,12 +12,18 @@
     padding-left: $list-space
 
   h2
-    margin-top: $b-space-l
     margin-bottom: $b-space-s
+    margin-top: $b-space-l
 
   h3
-    margin-top: $b-space
     margin-bottom: $b-space-s
+    margin-top: $b-space
+
+  blockquote
+    border-left: $b-space-xs $b-borderStyle $c-border
+    font-style: italic
+    margin: 0
+    padding-left: $b-space
 
   code, kbd
     background: $c-background-invert
