Move JavaScript imports to bottom of document

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,3 +1,6 @@
 %footer.row.row--a.tci
   .cell.well.well--l
     %p.tss Built using <a href='http://mvcss.github.io/' class='invertedLink'>MVCSS</a> and <a href='http://middlemanapp.com/' class='invertedLink'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='invertedLink'>GitHub</a>.
+
+= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
+= javascript_include_tag 'application', :async => true
