Change Inverted Link border unit to em

--- a/source/assets/stylesheets/structures/_invertedLink.sass
+++ b/source/assets/stylesheets/structures/_invertedLink.sass
@@ -6,7 +6,7 @@
 // *************************************
 
 .invertedLink
-  border-bottom: 2px solid $invertedLink-borderColor
+  border-bottom: em(2px) solid $invertedLink-borderColor
   color: $invertedLink-color
   font-weight: bold
   &:hover,
