Add Icon module

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -46,6 +46,7 @@
 // -------------------------------------
 
 @import "vendor/highlight"
+@import "vendor/icon"
 
 // -------------------------------------
 //   Foundation - Tools
