--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -9,7 +9,7 @@
 //   @font-face
 // -------------------------------------
 
-// ...
++font-face('fontello', '/assets/fonts/fontello', normal, normal, false)
 
 // -------------------------------------
 //   Colors
