Update Config, Row variables

--- a/source/assets/stylesheets/components/_row.sass
+++ b/source/assets/stylesheets/components/_row.sass
@@ -25,8 +25,8 @@
 // ----- Theme ----- //
 
 .row--a
-  background: $c-highlight
+  background: $row--a-background
 
 .row--b
-  background: $c-background-invert
+  background: $row--b-background
 
