--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -34,7 +34,6 @@ $white: #fff
 
 // Purple
 
-$scampi: #6c5995
 $majesty: #705c99
 $orchid: #86609f
 
@@ -44,7 +43,6 @@ $c-background-invert: $white
 $c-background: $alabaster
 $c-border: $quill
 $c-highlight: $orchid
-$c-highlight-b: $majesty
 $c-subdue: darken($quill, 20%)
 $c-text-invert: $alabaster
 $c-text: $nero
@@ -61,6 +59,11 @@ $btn--b-color: #4e4e5b
 // Pillar
 
 $pillar-borderColor: $c-border
+
+// Row
+
+$row--a-background: $orchid
+$row--b-background: $majesty
 
 // ----- Structures ----- //
 
@@ -126,9 +129,9 @@ $b-space-xl: 4 * $b-space
 $btn-borderRadius: 5px
 $btn--a-boxShadow-y: 4px
 $btn--a-boxShadow-y-offset: 2px
-$btn--a-boxShadow: 0 $btn--a-boxShadow-y 0 $scampi
-$btn--a-boxShadow-hover: 0 $btn--a-boxShadow-y 0 lighten($scampi, 10%)
-$btn--a-boxShadow-active: 0 ($btn--a-boxShadow-y - $btn--a-boxShadow-y-offset) 0 lighten($scampi, 10%)
+$btn--a-boxShadow: 0 $btn--a-boxShadow-y 0 $majesty
+$btn--a-boxShadow-hover: 0 $btn--a-boxShadow-y 0 lighten($majesty, 10%)
+$btn--a-boxShadow-active: 0 ($btn--a-boxShadow-y - $btn--a-boxShadow-y-offset) 0 lighten($majesty, 10%)
 
 // Typography
 
