Add Visually Hidden to Helpers

--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -101,6 +101,20 @@
     width: 0
     height: 150%
 
+// ----- Visually Hidden ----- //
+
+// -> https://github.com/h5bp/html5-boilerplate/blob/2e8a977d2c8c7c4bd704f076591d195b7cd521fa/css/main.css
+
+.visuallyHidden
+  border: 0
+  clip: rect(0 0 0 0)
+  height: 1px
+  margin: -1px
+  overflow: hidden
+  padding: 0
+  position: absolute
+  width: 1px
+
 // -------------------------------------
 //   Animations
 // -------------------------------------
