--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -1,3 +1,3 @@
-%a{:href => "/"}
+= link_to '/' do
   = image_tag 'johndjameson-logo.svg', height: 60, width: 60, class: 'bcb mrxs'
 %p.dib.tci.tsi He's got character.
