Hide Footnote Markers on wide screens

--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -42,9 +42,11 @@
 // -------------------------------------
 
 .post.has-sidenotes
+  +respond-to($g-l)
+    [id^='fnref']
+      display: none
 
-  .footnotes
-    +respond-to($g-l)
+    .footnotes
       display: none
 
 // -------------------------------------
