Change `visuallyHidden` to `srt`

--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -101,11 +101,11 @@
     width: 0
     height: 150%
 
-// ----- Visually Hidden ----- //
+// ----- Semantic Hide ----- //
 
 // -> https://github.com/h5bp/html5-boilerplate/blob/2e8a977d2c8c7c4bd704f076591d195b7cd521fa/css/main.css
 
-.visuallyHidden
+.srt
   border: 0
   clip: rect(0 0 0 0)
   height: 1px
