--- a/source/index.haml
+++ b/source/index.haml
@@ -15,17 +15,17 @@ description: "Front-end Developer Apprentice at Code School"
 
 %section.row
   .cell.cell--s.well.well--l
-    - get_posts()[0..0].each do |post|
-      = link_to post.data.title, post.url, class: 'h2 tfb'
-      %time.label.db.mbm= pretty_date(post.data.date)
-      %p.mbl= post.data.description
+    - post = get_posts().first
+    = link_to post.data.title, post.url, class: 'h2 tfb'
+    %time.label.db.mbm= pretty_date(post.data.date)
+    %p.mbl= post.data.description
 
-      .card
-        %h2.mbs Blog Posts
-        %ul.split.split--divided.split--responsive
-          - get_posts()[1..get_posts().length].each do |post|
-            %li.split-item
-              .split-cell.split-cell--fluid.prs
-                = link_to post.data.title, post.url, class: 'h3 tfb'
-              .split-cell.split-cell--fixed
-                %time.label= pretty_date(post.data.date)
+    .card
+      %h2.mbs Blog Posts
+      %ul.split.split--divided.split--responsive
+        - get_posts().drop(1).each do |post|
+          %li.split-item
+            .split-cell.split-cell--fluid.prs
+              = link_to post.data.title, post.url, class: 'h3 tfb'
+            .split-cell.split-cell--fixed
+              %time.label= pretty_date(post.data.date)
