--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -7,16 +7,16 @@
           %p.tss  Built using <a href='http://mvcss.github.io/' class='invertedLink'>MVCSS</a> and <a href='http://middlemanapp.com/' class='invertedLink'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='invertedLink'>GitHub</a>.
         .split-cell.split-cell--fixed.tsl
           = link_to 'https://twitter.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial('partials/icon', :locals => { :name => 'twitter', :text => 'Twitter' })
+            = partial 'partials/icon', :locals => { :name => 'twitter', :text => 'Twitter' }
 
           = link_to 'https://dribbble.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial('partials/icon', :locals => { :name => 'dribbble', :text => 'Dribbble' })
+            = partial 'partials/icon', :locals => { :name => 'dribbble', :text => 'Dribbble' }
 
           = link_to 'http://codepen.io/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial('partials/icon', :locals => { :name => 'codepen', :text => 'CodePen' })
+            = partial 'partials/icon', :locals => { :name => 'codepen', :text => 'CodePen' }
 
           = link_to 'https://github.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial('partials/icon', :locals => { :name => 'github', :text => 'GitHub' })
+            = partial 'partials/icon', :locals => { :name => 'github', :text => 'GitHub' }
 
 = javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
 = javascript_include_tag 'application', :async => true
