--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -4,7 +4,7 @@
     .split.split--responsive
       .split-item
         .split-cell.split-cell--fluid.prm
-          %p.tss  Built using <a href='http://mvcss.github.io/' class='invertedLink'>MVCSS</a> and <a href='http://middlemanapp.com/' class='invertedLink'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='invertedLink'>GitHub</a>.
+          %p.tss Built using <a href='http://mvcss.io/' class='invertedLink'>MVCSS</a> and <a href='http://middlemanapp.com/' class='invertedLink'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='invertedLink'>GitHub</a>.
         .split-cell.split-cell--fixed.tsl
           = link_to 'https://twitter.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
             = partial 'partials/icon', :locals => { :name => 'twitter', :text => 'Twitter' }
