Update job title

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,6 +1,6 @@
 ---
 title: Home
-description: "Front-end Developer Apprentice at Code School"
+description: "Front-end Developer at Code School"
 ---
 
 %section.hero.hero--ampersand
