--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -27,7 +27,7 @@
               %p.label.mbf Written by
               %h4.tfh John D. Jameson
               %p.tsm
-                Front-end Developer Apprentice at
+                Front-end Developer at
                 = link_to 'Code&nbsp;School', 'https://www.codeschool.com/'
 
     = partial 'shared/footer'
