Update MVCSS version, remove example Structure

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -1,6 +1,6 @@
 // *************************************
 //
-//   johndjameson.com - MVCSS v4.0.1
+//   johndjameson.com - MVCSS v4.0.6
 //   -> Manifest
 //
 // *************************************
@@ -9,49 +9,34 @@
 //   Foundation
 // -------------------------------------
 
-@import "foundation/reset"
-@import "foundation/helpers"
-@import "foundation/config"
-@import "foundation/base"
+@import 'foundation/reset'
+@import 'foundation/helpers'
+@import 'foundation/config'
+@import 'foundation/base'
 
 // -------------------------------------
 //   Components
 // -------------------------------------
 
-@import "components/bucket"
-@import "components/card"
-@import "components/cell"
-@import "components/grid"
-@import "components/list"
-@import "components/pillar"
-@import "components/row"
-@import "components/split"
-@import "components/thumb"
-@import "components/well"
+@import 'components/*'
 
 // -------------------------------------
 //   Structures
 // -------------------------------------
 
-@import "structures/figure"
-@import "structures/header"
-@import "structures/hero"
-@import "structures/invertedLink"
-@import "structures/label"
-@import "structures/post"
+@import 'structures/*'
 
 // -------------------------------------
 //   Vendor
 // -------------------------------------
 
-@import "vendor/highlight"
-@import "vendor/icon"
+@import 'vendor/*'
 
 // -------------------------------------
 //   Foundation - Tools
 // -------------------------------------
 
-@import "foundation/tools"
+@import 'foundation/tools'
 
 // -------------------------------------
 //   Inbox
