--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -67,12 +67,10 @@ $row--b-background: $majesty
 
 // ----- Structures ----- //
 
-// Inverted Link
-
-$invertedLink-borderColor: $c-text-invert
-$invertedLink-borderColor-hover: rgba($invertedLink-borderColor, 0.15)
-$invertedLink-color: $c-text-invert
-$invertedLink-color-hover: rgba($invertedLink-color, 0.5)
+$link-color: $c-highlight
+$link--state-color: darken($link-color, 15%)
+$link--inverted-color: $c-text-invert
+$link--inverted--state-color: rgba($link--inverted-color, 0.5)
 
 // ----- Vendor ----- //
 
