--- a/source/index.haml
+++ b/source/index.haml
@@ -16,9 +16,9 @@ description: "Front-end Developer at Code School"
           indoorsman in Orlando, Florida.
         %p
           I work (and learn) at
-          = link_to 'Code School', 'https://www.codeschool.com/', class: 'invertedLink'
+          = link_to 'Code School', 'https://www.codeschool.com/', class: 'link link--bordered link--inverted'
           , geek out over
-          = link_to 'CSS architecture', 'http://mvcss.io/', class: 'invertedLink'
+          = link_to 'CSS architecture', 'http://mvcss.io/', class: 'link link--bordered link--inverted'
           , and love building tools for people on the web.
 
 %section.row
