--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -163,7 +163,14 @@ $g-selector: if($g-silent, unquote("%"), unquote("."))
 
 // ----- List ----- //
 
+// Borders
+
+$list-border: $b-border
+
+// Spacing
+
 $list-space: $b-space
+$list-space-s: $b-space * 0.5
 
 // ----- Pillar ----- //
 
