--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -102,6 +102,13 @@
     width: 0
     height: 150%
 
+// ----- List Reset ----- //
+
+.lr
+  list-style-type: none
+  margin: 0
+  padding: 0
+
 // ----- Semantic Hide ----- //
 
 // -> https://github.com/h5bp/html5-boilerplate/blob/2e8a977d2c8c7c4bd704f076591d195b7cd521fa/css/main.css
