Add wsn to Tools

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -268,3 +268,10 @@
   font-weight: normal
 .twb
   font-weight: bold
+
+// -------------------------------------
+//   White Space
+// -------------------------------------
+
+.wsn
+  white-space: nowrap
