Integrate footer styles

--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -1,25 +1,24 @@
 %footer.row.row--b.tci
   .cell.well.well--l
 
-    .split.split--responsive
-      .split-item
-        .split-cell.split-cell--fluid.prm
-          %p.tss Built using <a href='http://mvcss.io/' class='invertedLink'>MVCSS</a> and <a href='http://middlemanapp.com/' class='invertedLink'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='invertedLink'>GitHub</a>.
-        .split-cell.split-cell--fixed.tsl
-          = link_to 'https://twitter.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial 'partials/icon', :locals => { :name => 'twitter', :text => 'Twitter' }
+    .split
+      .split-cell.prm
+        %p.mbf.tss Built using <a href='http://mvcss.io/' class='link link--bordered link--inverted'>MVCSS</a> and <a href='http://middlemanapp.com/' class='link link--bordered link--inverted'>Middleman</a>. Check out the source code on <a href='https://github.com/johndjameson/johndjameson.com' class='link link--bordered link--inverted'>GitHub</a>.
+      .split-cell.tsl.wsn
+        = link_to 'https://twitter.com/johndjameson', class: 'link link--borderless link--inverted' do
+          = partial 'partials/icon', locals: { name: 'twitter', text: 'Twitter' }
 
-          = link_to 'https://dribbble.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial 'partials/icon', :locals => { :name => 'dribbble', :text => 'Dribbble' }
+        = link_to 'https://dribbble.com/johndjameson', class: 'link link--borderless link--inverted' do
+          = partial 'partials/icon', locals: { name: 'dribbble', text: 'Dribbble' }
 
-          = link_to 'http://codepen.io/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial 'partials/icon', :locals => { :name => 'codepen', :text => 'CodePen' }
+        = link_to 'http://codepen.io/johndjameson', class: 'link link--borderless link--inverted' do
+          = partial 'partials/icon', locals: { name: 'codepen', text: 'CodePen' }
 
-          = link_to 'https://github.com/johndjameson', class: 'invertedLink invertedLink--borderless' do
-            = partial 'partials/icon', :locals => { :name => 'github', :text => 'GitHub' }
+        = link_to 'https://github.com/johndjameson', class: 'link link--borderless link--inverted' do
+          = partial 'partials/icon', locals: { name: 'github', text: 'GitHub' }
 
 = javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
-= javascript_include_tag 'application', :async => true
+= javascript_include_tag 'application', async: true
 
 :javascript
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
